Added a map layer

--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -1,3 +1,6 @@
 {
-  "yourTokenIs": "Avaimesi on: "
+  "yourTokenIs": "Avaimesi on: ",
+  "map": "Kartta",
+  "from": "Paikasta",
+  "to": "Paikkaan"
 }
