Saved routes UI added.

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -4,5 +4,9 @@
   "from": "From",
   "to": "To",
   "findRoute": "Find route",
-  "saveRoute": "Save route"
+  "saveRoute": "Save route",
+  "savedRoutes": "Saved routes",
+  "savedRoutesFrom": "From",
+  "savedRoutesTo": "To",
+  "savedRoutesSavedText": "Saved"
 }
