--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -23,6 +23,19 @@
   "monthlyExposure": "Kuukausittainen altistuminen",
   "annualExposure": "Vuosittainen altistuminen",
   "displayTables": "Valitse aika, jotta voit nähdä taulukot",
-  "selectTime": "Valitse aika"
-
+  "selectTime": "Valitse aika",
+  "settings": "Asetukset",
+  "airQualityMode": "Ilmanlaadun tila",
+  "movementOptions": "Liikkumisasetukset",
+  "waliking": "Walking",
+  "wheelerchair": "Wheelerchair",
+  "homeAddress": "Koti osoite",
+  "streetAddress": "Katu osoite",
+  "city": "Maa",
+  "zipCode": "Postinumero",
+  "country": "Country",
+  "applyChanges": "Tallenna muutokset",
+  "downloadData": "Lataa datasi",
+  "changeUserData": "Muokkaa käyttäjätietoja",
+  "deleteAccount": "Poista tilisi"
 }
