Fetching routes from the API

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -9,7 +9,7 @@
   "savedRoutesFrom": "From",
   "savedRoutesTo": "To",
   "savedRoutesSavedText": "Saved",
-  "DeleteTitle": "Are you sure you want to delete this?",
+  "deleteConfirm": "Are you sure you want to delete this?",
   "yes": "Yes",
   "statistics": "Statistics",
   "pollutantPM25": "PM25",
@@ -41,5 +41,8 @@
   "changeUserData": "Change your user data",
   "deleteAccount": "Delete account",
   "deleteAccountDialogTitle": "Are you sure you want to delete your account?",
-  "deleteAccountDialogText": "If you press yes your account can't be recovered. You will be redirected to login page."
+  "deleteAccountDialogText": "If you press yes your account can't be recovered. You will be redirected to login page.",
+
+  "viewRoute": "View route",
+  "deleteRoute": "Delete route"
 }
