--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -1,5 +1,7 @@
 {
   "yourTokenIs": "Your token is: ",
+  "frontPage": "Front page",
+  "hello": "Hello,",
   "map": "Map",
   "from": "From",
   "to": "To",
