--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -46,5 +46,7 @@
   "deleteAccountDialogText": "If you press yes your account can't be recovered. You will be redirected to login page.",
 
   "viewRoute": "View route",
-  "deleteRoute": "Delete route"
+  "deleteRoute": "Delete route",
+
+  "user": "User"
 }
