Added support for saving home address

--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -12,14 +12,14 @@
   "savedRoutesTo": "Minne",
   "savedRoutesSavedText": "Tallennettu",
   "deleteConfirm": "Oletko varma että haluat poistaa tämän?",
-  "yes": "Yes",
+  "yes": "Kyllä",
   "statistics": "Statistiikka",
   "pollutantPM25": "PM25",
   "pollutantPM10": "PM10",
   "pollutantOzone": "Otsooni",
-  "pollutantNitrogen": "Nitrogen dioxine",
-  "pollutanSulfur": "Sulfur dioxine",
-  "cancel": "cancel",
+  "pollutantNitrogen": "Typpidioksidi",
+  "pollutanSulfur": "Rikkidioksidi",
+  "cancel": "Peruuta",
   "confirmTimeRange": "Valitse aikaväli",
   "selectPollution": "Valitse ilmansaaste",
   "reset": "Palauta",
@@ -31,13 +31,13 @@
   "settings": "Asetukset",
   "airQualityMode": "Ilmanlaadun tila",
   "movementOptions": "Liikkumisasetukset",
-  "waliking": "Walking",
-  "wheelerchair": "Wheelerchair",
-  "homeAddress": "Koti osoite",
-  "streetAddress": "Katu osoite",
+  "waliking": "Kävley",
+  "wheelerchair": "Pyörätuoli",
+  "homeAddress": "Kotiosoite",
+  "streetAddress": "Katuosoite",
   "city": "Maa",
   "zipCode": "Postinumero",
-  "country": "Country",
+  "country": "Maa",
   "applyChanges": "Tallenna muutokset",
   "downloadData": "Lataa datasi",
   "changeUserData": "Muokkaa käyttäjätietoja",
