--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -47,5 +47,9 @@
   "viewRoute": "Näytä reitti",
   "deleteRoute": "Poista reitti",
 
-  "user": "Käyttäjä"
+  "user": "Käyttäjä",
+
+  "postalCode": "Postinumero",
+  "confirmButtonText": "Selvä",
+  "locationNotFoundDialogText": "Paikkaa ei löydetty"
 }
