Added a support for the separation of home address details

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -31,7 +31,7 @@
   "settings": "Settings",
   "airQualityMode": "Air quality mode",
   "movementOptions": "Movement options",
-  "waliking": "Walking",
+  "walking": "Walking",
   "wheelerchair": "Wheelerchair",
   "homeAddress": "Home address",
   "streetAddress": "Street address",
