--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -31,11 +31,11 @@
   "settings": "Asetukset",
   "airQualityMode": "Ilmanlaadun tila",
   "movementOptions": "Liikkumisasetukset",
-  "waliking": "Kävley",
+  "walking": "Kävely",
   "wheelerchair": "Pyörätuoli",
   "homeAddress": "Kotiosoite",
   "streetAddress": "Katuosoite",
-  "city": "Maa",
+  "city": "Kaupunki",
   "zipCode": "Postinumero",
   "country": "Maa",
   "applyChanges": "Tallenna muutokset",
