--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -45,5 +45,6 @@
   "deleteAccountDialogTitle": "Oletko varma että haluat poistaa tilisi?",
   "deleteAccountDialogText": "Jos painat kyllä, tätä tiliä ei voi enää palauttaa. Sinut ohjataan kirjautumissivulle.",
   "viewRoute": "Näytä reitti",
-  "deleteRoute": "Poista reitti"
+  "deleteRoute": "Poista reitti",
+  "collapseMenuText": "Piilota menu"
 }
