--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -66,5 +66,10 @@
   "user": "Käyttäjä",
   "postalCode": "Postinumero",
   "confirmButtonText": "Selvä",
-  "locationNotFoundDialogText": "Paikkaa ei löydetty"
+  "locationNotFoundDialogText": "Paikkaa ei löydetty",
+  "aboutScreen": {
+    "title": "Megasense data portal UI",
+    "subTitle": "Clean air routing web application. Product developed as a part of a Megasense consortium.",
+    "descriptionText": "Provides clean air route building capabilities. Features user tailored post-routing user statistics. Application is currently in development."
+  }
 }
