--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -1,8 +1,14 @@
 {
-
   "auth": {
     "login": "Log in",
     "logout": "Log out"
+  },
+
+  "header": {
+    "statistics": "Statistics",
+    "map": "Map",
+    "settings": "Settings",
+    "about": "About"
   },
 
   "routes": {
@@ -17,10 +23,33 @@
     "cancelButton": "Cancel"
   },
 
+  "statistics": {
+    "selectPollution": "Select pollution:",
+    "daily": "Daily",
+    "weekly": "Weekly",
+    "monthly": "Monthly",
+    "annual": "Annual",
+    "carbonMonoxide": "Carbon monoxide",
+    "ozone": "Ozone",
+    "nitrogenDioxide": "Nitrogen dioxide",
+    "sulfurDioxide": "Sulfur dioxide"
+  },
+
+  "settings": {
+    "title": "Settings",
+    "applyChanges": "Apply changes",
+    "homeAddress": "Home address"
+  },
+
+  "aboutScreen": {
+    "title": "Megasense data portal UI",
+    "subTitle": "Clean air routing web application. Product developed as a part of a Megasense consortium.",
+    "descriptionText": "Provides clean air route building capabilities. Features user tailored post-routing user statistics. Application is currently in development."
+  },
+
   "yourTokenIs": "Your token is: ",
   "frontPage": "Front page",
   "hello": "Hello,",
-  "map": "Map",
   "from": "From",
   "to": "To",
   "savedRoutes": "Saved routes",
@@ -29,7 +58,6 @@
   "savedRoutesSavedText": "Saved",
   "deleteConfirm": "Are you sure you want to delete this?",
   "yes": "Yes",
-  "statistics": "Statistics",
   "pollutantPM25": "PM25",
   "pollutantPM10": "PM10",
   "pollutantOzone": "Ozone",
@@ -44,17 +72,14 @@
   "annualExposure": "Annual exposure",
   "displayTables": "Select time to display tables",
   "selectTime": "Select time",
-  "settings": "Settings",
   "airQualityMode": "Air quality mode",
   "movementOptions": "Movement options",
   "walking": "Walking",
   "wheelerchair": "Wheelerchair",
-  "homeAddress": "Home address",
   "streetAddress": "Street address",
   "city": "City",
   "zipCode": "Zip code",
   "country": "Country",
-  "applyChanges": "Apply changes",
   "downloadData": "Download your data",
   "changeUserData": "Change account settings",
   "deleteAccount": "Delete account",
@@ -66,11 +91,5 @@
   "user": "User",
   "postalCode": "Postal code",
   "confirmButtonText": "Confirmed",
-  "locationNotFoundDialogText": "Location not found",
-  "about": "About",
-  "aboutScreen": {
-    "title": "Megasense data portal UI",
-    "subTitle": "Clean air routing web application. Product developed as a part of a Megasense consortium.",
-    "descriptionText": "Provides clean air route building capabilities. Features user tailored post-routing user statistics. Application is currently in development."
-  }
+  "locationNotFoundDialogText": "Location not found"
 }
