--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -2,7 +2,9 @@
   
   "auth": {
     "login": "Kirjaudu sisään",
-    "logout": "Kirjaudu ulos"
+    "logout": "Kirjaudu ulos",
+    "register": "Luo käyttäjätili",
+    "guestUser": "Jatka kirjautumatta"
   },
   
   "routes": {
