--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -2,7 +2,9 @@
 
   "auth": {
     "login": "Log in",
-    "logout": "Log out"
+    "logout": "Log out",
+    "register": "Register",
+    "guestUser": "Continue as a guest"
   },
 
   "routes": {
