--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -4,6 +4,10 @@
     "logout": "Log out"
   },
 
+  "welcome": {
+    "hello": "Hello,"
+  },
+
   "header": {
     "statistics": "Statistics",
     "map": "Map",
@@ -24,6 +28,7 @@
   },
 
   "statistics": {
+    "title": "Statistics",
     "selectPollution": "Select pollution:",
     "daily": "Daily",
     "weekly": "Weekly",
@@ -38,7 +43,19 @@
   "settings": {
     "title": "Settings",
     "applyChanges": "Apply changes",
-    "homeAddress": "Home address"
+    "homeAddress": "Home address",
+    "streetAddress": "Street address",
+    "city": "City",
+    "zipCode": "Zip code",
+    "country": "Country",
+    "postalCode": "Postal code",
+    "locationNotFoundDialogText": "Location not found",
+    "confirmButtonText": "Confirmed",
+    "deleteAccount": "Delete account",
+    "deleteAccountDialogTitle": "Are you sure you want to delete your account?",
+    "deleteAccountDialogText": "If you press yes your account can't be recovered. You will be redirected to login page.",
+    "changeUserData": "Change account settings",
+    "downloadData": "Download your data"
   },
 
   "aboutScreen": {
@@ -48,8 +65,6 @@
   },
 
   "yourTokenIs": "Your token is: ",
-  "frontPage": "Front page",
-  "hello": "Hello,",
   "from": "From",
   "to": "To",
   "savedRoutes": "Saved routes",
@@ -57,16 +72,8 @@
   "savedRoutesTo": "To",
   "savedRoutesSavedText": "Saved",
   "deleteConfirm": "Are you sure you want to delete this?",
-  "yes": "Yes",
-  "pollutantPM25": "PM25",
-  "pollutantPM10": "PM10",
-  "pollutantOzone": "Ozone",
-  "pollutantNitrogen": "Nitrogen dioxine",
-  "pollutanSulfur": "Sulfur dioxine",
-  "cancel": "cancel",
   "confirmTimeRange": "Confirm time range",
   "selectPollution": "Select pollution",
-  "reset": "reset",
   "weeklyExposure": "Weekly exposure",
   "monthlyExposure": "Monthly exposure",
   "annualExposure": "Annual exposure",
@@ -76,20 +83,23 @@
   "movementOptions": "Movement options",
   "walking": "Walking",
   "wheelerchair": "Wheelerchair",
-  "streetAddress": "Street address",
-  "city": "City",
-  "zipCode": "Zip code",
-  "country": "Country",
-  "downloadData": "Download your data",
-  "changeUserData": "Change account settings",
-  "deleteAccount": "Delete account",
-  "deleteAccountDialogTitle": "Are you sure you want to delete your account?",
-  "deleteAccountDialogText": "If you press yes your account can't be recovered. You will be redirected to login page.",
   "viewRoute": "View route",
   "deleteRoute": "Delete route",
   "collapseMenuText": "Collapse menu",
   "user": "User",
-  "postalCode": "Postal code",
-  "confirmButtonText": "Confirmed",
-  "locationNotFoundDialogText": "Location not found"
+
+  "pollutants": {
+    "PM25": "PM25",
+    "PM10": "PM10",
+    "ozone": "Ozone",
+    "nitrogenDioxide": "Nitrogen dioxine",
+    "sulfurDioxide": "Sulfur dioxine",
+    "carbonMonoxide": "Carbon monoxide"
+  },
+
+  "common": {
+    "reset": "reset",
+    "cancel": "cancel",
+    "yes": "Yes"
+  }
 }
