--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -56,6 +56,7 @@
   },
 
   "settings": {
+    "unsavedChangesWillBeLost": "Unsaved changes will be lost. Do you want to continue?",
     "title": "Settings",
     "applyChanges": "Apply changes",
     "homeAddress": "Home address",
@@ -113,6 +114,7 @@
   },
 
   "common": {
+    "save": "Tallenna",
     "reset": "reset",
     "cancel": "cancel",
     "yes": "Yes"
