--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -83,8 +83,10 @@
   },
 
   "yourTokenIs": "Your token is: ",
-  "from": "From",
   "to": "To",
+  "from": "From",
+  "departureTime": "Departure time",
+  "departureDate": "Departure date",
   "savedRoutes": "Saved routes",
   "savedRoutesFrom": "From",
   "savedRoutesTo": "To",
