--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -17,6 +17,12 @@
     "about": "About"
   },
 
+  "timePicker": {
+    "cancel": "Cancel",
+    "clear": "Clear",
+    "today": "Today"
+  },
+
   "errorDialog": {
     "title": "Whoops! Something went wrong",
     "reloadPage": "Try reloading the page.",
