UI implemented for saved location

--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -116,6 +116,10 @@
   "savedRoutesFrom": "From",
   "savedRoutesTo": "To",
   "savedRoutesSavedText": "Saved",
+  "savedLocations": "Saved locations",
+  "savedLocationsLatitude": "Latitude",
+  "savedLocationsLongtitude": "Longtitude",
+  "savedLocationsSavedText": "Saved",
   "deleteConfirm": "Are you sure you want to delete this?",
   "confirmTimeRange": "Confirm time range",
   "selectPollution": "Select pollution",
@@ -129,7 +133,9 @@
   "walking": "Walking",
   "wheelerchair": "Wheelerchair",
   "viewRoute": "View route",
+  "viewLocation": "View location",
   "deleteRoute": "Delete route",
+  "deleteLocation": "Delete location",
   "collapseMenuText": "Collapse menu",
   "user": "User",
   "showMore": "Show all",
