--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -116,6 +116,10 @@
   "savedRoutesFrom": "Mistä",
   "savedRoutesTo": "Minne",
   "savedRoutesSavedText": "Tallennettu",
+  "savedLocations": "Saved locations",
+  "savedLocationsLatitude": "Latitude",
+  "savedLocationsLongtitude": "Longtitude",
+  "savedLocationsSavedText": "Saved",
   "deleteConfirm": "Oletko varma että haluat poistaa tämän?",
   "confirmTimeRange": "Valitse aikaväli",
   "selectPollution": "Valitse ilmansaaste",
@@ -129,7 +133,9 @@
   "walking": "Kävely",
   "wheelerchair": "Pyörätuoli",
   "viewRoute": "Näytä reitti",
+  "viewLocation": "View location",
   "deleteRoute": "Poista reitti",
+  "deleteLocation": "Delete location",
   "collapseMenuText": "Piilota menu",
   "user": "Käyttäjä",
   "showMore": "Näytä kaikki",
