--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -116,10 +116,10 @@
   "savedRoutesFrom": "Mistä",
   "savedRoutesTo": "Minne",
   "savedRoutesSavedText": "Tallennettu",
-  "savedLocations": "Saved locations",
-  "savedLocationsLatitude": "Latitude",
-  "savedLocationsLongtitude": "Longtitude",
-  "savedLocationsSavedText": "Saved",
+  "savedLocations": "Tallennetut sijainnit",
+  "savedLocationsLatitude": "Leveysaste",
+  "savedLocationsLongtitude": "Pituusaste",
+  "savedLocationsSavedText": "Tallennettu",
   "deleteConfirm": "Oletko varma että haluat poistaa tämän?",
   "confirmTimeRange": "Valitse aikaväli",
   "selectPollution": "Valitse ilmansaaste",
@@ -133,9 +133,9 @@
   "walking": "Kävely",
   "wheelerchair": "Pyörätuoli",
   "viewRoute": "Näytä reitti",
-  "viewLocation": "View location",
+  "viewLocation": "Näytä sijainti",
   "deleteRoute": "Poista reitti",
-  "deleteLocation": "Delete location",
+  "deleteLocation": "Poista sijainti",
   "collapseMenuText": "Piilota menu",
   "user": "Käyttäjä",
   "showMore": "Näytä kaikki",
