--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -22,7 +22,8 @@
     "statistics": "Statistics",
     "map": "Map",
     "settings": "Settings",
-    "about": "About"
+    "about": "About",
+    "logoText": "GREEN PATHS"
   },
 
   "timePicker": {
