--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -22,7 +22,8 @@
     "statistics": "Statistiikka",
     "map": "Kartta",
     "settings": "Asetukset",
-    "about": "Tietoa projektista"
+    "about": "Tietoa projektista",
+    "logoText": "GREEN PATHS"
   },
 
   "timePicker": {
