Styling changes and bug fixes

--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -174,5 +174,9 @@
     "asthma": "Asthma",
     "ischaemicHeartDisease": "Sepelvaltimotauti",
     "copd": "Keuhkoahtaumatauti"
+  },
+
+  "units": {
+    "hours": "t"
   }
 }
