added localisation strings, formatting fixes, moved air quality update to separate function

--- a/src/localization/fi.json
+++ b/src/localization/fi.json
@@ -144,6 +144,7 @@
   "user": "Käyttäjä",
   "showMore": "Näytä kaikki",
   "showLess": "Näytä vähemmän",
+  "airQuality": "Ilman laatu",
 
   "pollutants": {
     "PM25": "Pienhiukkaset",
