--- a/src/localization/en.json
+++ b/src/localization/en.json
@@ -144,6 +144,7 @@
   "user": "User",
   "showMore": "Show all",
   "showLess": "Show less",
+  "airQuality": "Air quality",
 
   "pollutants": {
     "PM25": "PM25",
